@@ -672,8 +672,6 @@ static void R_LoadProfile(FILE *fparg, SEXP env)
 
 int R_SignalHandlers = 1;  /* Exposed in R_interface.h */
 
-unsigned int TimeToSeed(void); // times.c
-
 const char* get_workspace_name();  /* from startup.c */
 
 void attribute_hidden BindDomain(char *R_Home)
