@@ -145,8 +145,7 @@ SEXP attribute_hidden do_systime(SEXP call, SEXP op, SEXP args, SEXP env)
 #endif
 
 /* For RNG.c, main.c, mkdtemp.c */
-attribute_hidden
-unsigned int TimeToSeed(void)
+attribute_hidden unsigned int TimeToSeed(void)
 {
     unsigned int seed, pid = getpid();
 #if defined(HAVE_CLOCK_GETTIME) && defined(CLOCK_REALTIME)
